# edumdns

./: .dockerignore  .env-docker  .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  README.md  diagram.puml  diagram2.puml  docker-compose.yaml  edumdns.container  podman.sh  todolist.md
edumdns/: .gitignore  Cargo.toml  Dockerfile  README.md  edumdns-example.toml  edumdns.toml
edumdns/actix_web_openidconnect/: .cargo_vcs_info.json  Cargo.toml  README.md
edumdns/actix_web_openidconnect/src/: lib.rs  openid.rs  openid_middleware.rs
edumdns/edumdns_db/: Cargo.toml  README.md  console.sql  diesel.toml
edumdns/edumdns_db/migrations/2025-05-16-093200_schema/: up.sql
edumdns/edumdns_db/migrations/2025-08-29-120428_seed/: down.sql  up.sql
edumdns/edumdns_db/src/: config.rs  error.rs  init.rs  lib.rs  models.rs  schema.rs
edumdns/edumdns_db/src/repositories/: common.rs  utilities.rs
edumdns/edumdns_server/: Cargo.toml  README.md
edumdns/edumdns_server/src/: app_packet.rs  config.rs  connection.rs  database.rs  ebpf.rs  error.rs  lib.rs  listen.rs  manager.rs  ordered_map.rs  probe_tracker.rs  transmitter.rs  utilities.rs
edumdns/edumdns_server/src/connection/: listen.rs  manager.rs  mod.rs
edumdns/edumdns_server/src/database/: manager.rs  mod.rs  util.rs
edumdns/edumdns_server/src/io/: listen.rs  mod.rs
edumdns/edumdns_server/src/server/: cache.rs  ebpf.rs  manager.rs  mod.rs
edumdns/edumdns_server/src/transmit/: manager.rs  mod.rs  transmitter.rs
edumdns/edumdns_server/src/utils/: mod.rs  ordered_map.rs  probe_tracker.rs  processing.rs
edumdns/edumdns_web/: Cargo.toml  README.md
edumdns/edumdns_web/frontend/: style.css
edumdns/edumdns_web/src/: config.rs  error.rs  init.rs  lib.rs  middleware.rs  utils.rs
edumdns/edumdns_web/src/forms/: device.rs  group.rs  packet.rs  probe.rs  user.rs
edumdns/edumdns_web/src/handlers/: device.rs  group.rs  helpers.rs  index.rs  mod.rs  packet.rs  probe.rs  user.rs  utilities.rs
edumdns/edumdns_web/src/templates/: device.rs  index.rs  packet.rs  probe.rs  user.rs
edumdns/edumdns_web/static/css/: output.css
edumdns/edumdns_web/templates/: head.html
edumdns/edumdns_web/templates/components/: footer.html  navbar.html
edumdns/edumdns_web/templates/device/: content.html
edumdns/edumdns_web/templates/group/: content.html
edumdns/edumdns_web/templates/index/: content.html  login.html  page.html
edumdns/edumdns_web/templates/packet/: content.html
edumdns/edumdns_web/templates/probe/: content.html
edumdns/edumdns_web/templates/user/: content.html
edumdns/nginx/: Dockerfile
edumdns/nginx/conf.d/: site.conf
edumdns/src/: config.rs  error.rs  main.rs
edumdns/systemd/: edumdns.service  edumdns.te
edumdns_app/: Cargo.toml  Dockerfile
edumdns_app/edumdns_db/: diesel.toml
edumdns_app/edumdns_db/src/: error.rs  init.rs
edumdns_app/edumdns_db/src/repositories/: mod.rs  utilities.rs
edumdns_app/edumdns_server/src/: app_packet.rs  connection.rs  database.rs  ebpf.rs  error.rs  listen.rs  ordered_map.rs
edumdns_app/edumdns_web/: Cargo.toml
edumdns_app/edumdns_web/frontend/: build.sh  package-lock.json
edumdns_app/edumdns_web/src/: error.rs  lib.rs  utils.rs
edumdns_app/edumdns_web/src/forms/: device.rs
edumdns_app/edumdns_web/src/handlers/: group.rs  index.rs  (+3 more)
edumdns_app/edumdns_web/templates/: head.html
edumdns_core/: Cargo.toml  README.md
edumdns_core/src/: addr_types.rs  app_packet.rs  bincode_types.rs  capture.rs  connection.rs  error.rs  interface.rs  lib.rs  metadata.rs  network_packet.rs  packet.rs  rewrite.rs  utils.rs
edumdns_db/: Cargo.toml  console.sql
edumdns_db/migrations/2025-05-16-093200_schema/: down.sql  up.sql
edumdns_db/migrations/2025-08-29-120428_seed/: up.sql
edumdns_db/src/: error.rs  init.rs  lib.rs  models.rs  schema.rs
edumdns_db/src/repositories/: common.rs  mod.rs  utilities.rs
edumdns_probe/: .gitignore  Cargo.toml  README.md  env-example  fedora-desktop  fedora-ics  fedora-roman  lo  muni-lo  uuid
edumdns_probe/src/: capture.rs  connection.rs  error.rs  lib.rs  listen.rs  main.rs  probe.rs  transmit.rs
edumdns_probe/systemd/: edumdns_probe.service
edumdns_proxy/edumdns_proxy/: Cargo.toml  build.rs
edumdns_proxy/edumdns_proxy-ebpf/: Cargo.toml
edumdns_proxy/edumdns_proxy-ebpf/src/: checksum.rs  main.rs
edumdns_proxy/edumdns_proxy/src/: error.rs  main.rs
edumdns_server/: Cargo.toml
edumdns_server/src/: app_packet.rs  connection.rs  database.rs  ebpf.rs  error.rs  handler.rs  lib.rs  listen.rs  manager.rs  ordered_map.rs  packet.rs  probe_tracker.rs  storage.rs  transmitter.rs  utilities.rs
edumdns_web/: Cargo.toml
edumdns_web/frontend/: package-lock.json  package.json  style.css
edumdns_web/src/: error.rs  init.rs  lib.rs  middleware.rs  utils.rs
edumdns_web/src/forms/: device.rs  group.rs  mod.rs  packet.rs  probe.rs  user.rs
edumdns_web/src/handlers/: device.rs  group.rs  helpers.rs  index.rs  location.rs  mod.rs  packet.rs  probe.rs  user.rs  utilities.rs
edumdns_web/src/models/: display.rs
edumdns_web/src/templates/: device.rs  error.rs  group.rs  index.rs  mod.rs  packet.rs  probe.rs  user.rs
edumdns_web/static/css/: output.css
edumdns_web/templates/: error.html  head.html
edumdns_web/templates/about/: content.html  page.html
edumdns_web/templates/bike/: content.html  page.html
edumdns_web/templates/brand/: content.html  page.html
edumdns_web/templates/components/: card_likes.html  detail_likes.html  footer.html  form.html  navbar.html
edumdns_web/templates/device/: content.html
edumdns_web/templates/group/: content.html  page.html
edumdns_web/templates/image/: content.html  page.html
edumdns_web/templates/index/: content.html  login.html  page.html
edumdns_web/templates/location/: page.html
edumdns_web/templates/model/: content.html  page.html
edumdns_web/templates/packet/: content.html  page.html
edumdns_web/templates/probe/: content.html
edumdns_web/templates/tag/: content.html
edumdns_web/templates/user/: content.html  login.html  page.html
edumdns_web/webroot/: sitemap.xml
(+122 files in other folders)
