[package]
name = "edumdns"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.10.1"
edumdns_core = { path = "edumdns_core" }
edumdns_probe = { path = "edumdns_probe" }
edumdns_server = { path = "edumdns_server" }
edumdns_db = { path = "edumdns_db" }
edumdns_web = { path = "edumdns_web" }
thiserror = "2.0.12"
tokio = {version =  "1.44.2", features = ["full"] }
log = "0.4.27"
env_logger = "0.11.8"
dotenvy = "0.15.7"
anyhow = "1.0.98"
diesel-async = { version = "0.5.2" , features = ["tokio-postgres", "postgres", "deadpool"]}
actix-web = "4.11.0"



[workspace]
members = [
    "edumdns_core", "edumdns_db",
    "edumdns_probe",
    "edumdns_server"
, "edumdns_web"]
