[package]
name = "edumdns"
version = "0.1.0"
edition = "2024"

[dependencies]
edumdns_server = { path = "edumdns_server" }
edumdns_db = { path = "edumdns_db" }
edumdns_web = { path = "edumdns_web" }
thiserror = "2.0.12"
tokio = {version =  "1.44.2", features = ["full"] }
dotenvy = "0.15.7"
actix-web = "4.11.0"
tracing = { version = "0.1.41", features = ["async-await"]}
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "local-time", "time"] }
clap = { version = "4.5.38", features = ["derive"] }



[workspace]
members = [
    "edumdns_core", "edumdns_db", "edumdns_probe",
    "edumdns_server", "edumdns_web"
]
