[package]
name = "edumdns"
version = "0.1.0"
edition = "2024"
resolver = "3"

[[bin]]
name = "edumdns"

[dependencies]
tracing = { version = "0.1.43", features = ["async-await"] }
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "local-time", "time"] }
clap = { version = "4.5.53", features = ["derive", "env"] }

edumdns_server = { workspace = true }
edumdns_db = { workspace = true }
edumdns_web = { workspace = true }
actix-web = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
rustls = { workspace = true }
serde = { workspace = true }
config = "0.15.19"


[workspace.dependencies]
edumdns_core = { path = "../edumdns_core"}
edumdns_server = { path = "edumdns_server" }
edumdns_db = { path = "edumdns_db" }
edumdns_web = { path = "edumdns_web" }
itertools = "0.14.0"
rustls = { version = "0.23.35", features = ["ring", "default"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
actix-web = { version = "4.12.1", features = ["rustls-0_23"] }
log = "0.4.28"
ipnetwork = { version = "0.21.1", features = ["serde"]}
uuid = { version = "1.19.0", features = ["v4", "v7", "serde"] }
diesel-async = { version = "0.7.4" , features = ["tokio-postgres", "postgres", "deadpool"]}
serde = { version = "1.0.228", features = ["derive", "std"] }
hickory-proto = { version = "0.26.0-alpha.1", features = ["default", "serde", "text-parsing"]}
strum = "0.27.2"
time = { version = "0.3.44", features = ["serde", "local-offset", "parsing", "formatting"] }
futures = "0.3.31"
futures-util = "0.3.31"

[workspace]
members = [
    "edumdns_db",
    "edumdns_server",
    "edumdns_web"
]
