[package]
name = "edumdns"
version = "0.1.0"
edition = "2024"
resolver = "3"

[dependencies]
tracing = { version = "0.1.41", features = ["async-await"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "local-time", "time"] }
clap = { version = "4.5.38", features = ["derive"] }

edumdns_server = { workspace = true }
edumdns_db = { workspace = true }
edumdns_web = { workspace = true }
actix-web = { workspace = true }
dotenvy = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }

[workspace.dependencies]
edumdns_core = { path = "../edumdns_core"}
edumdns_server = { path = "edumdns_server" }
edumdns_db = { path = "edumdns_db" }
edumdns_web = { path = "edumdns_web" }
thiserror = "2.0.12"
tokio = { version = "1.48.0", features = ["full"] }
dotenvy = "0.15.7"
actix-web = "4.11.0"
log = "0.4.28"
ipnetwork = { version = "0.21.1", features = ["serde"]}
uuid = { version = "1.18.1", features = ["v4", "v7", "serde"] }
diesel-async = { version = "0.6.1" , features = ["tokio-postgres", "postgres", "deadpool"]}
serde = { version = "1.0.226", features = ["derive", "std"] }
hickory-proto = { version = "0.25.2", features = ["default", "serde"]}
strum = "0.27.2"
time = { version = "0.3.44", features = ["serde", "local-offset", "parsing", "formatting"] }
futures = "0.3.31"
futures-util = "0.3.31"

[workspace]
members = [
    "edumdns_db", ".",
    "edumdns_server", "edumdns_web"
]
