[package]
name = "edumdns_core"
version = "0.1.0"
edition = "2024"

[dependencies]
pcap = {  version = "2.2.0", features = ["tokio", "lending-iter", "futures"]}
pnet = "0.35.0"
thiserror = "2.0.12"
dns-parser = "0.8.0"
bincode = "2.0.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_bytes = "0.11.17"
bytes = "1.10.1"
futures = "0.3.31"
clap = { version = "4.5.37", features = ["derive"] }
log = "0.4.27"
ipnetwork = { version = "0.21.1"}
uuid = "1.17.0"
tokio = { version = "1.44.2", features = ["net", "bytes", "time"] }
tokio-util = { version = "0.7.14", features = ["codec"] }
hickory-proto = "0.25.2"
sha2 = "0.11.0-rc.2"
hex = "0.4.3"