[package]
name = "edumdns_core"
version = "0.1.0"
edition = "2024"

[dependencies]
pcap = {  version = "2.3.0", features = ["tokio", "lending-iter", "futures"]}
pnet = "0.35.0"
thiserror = "2.0.16"
bincode = "2.0.1"
serde = { version = "1.0.226", features = ["derive"] }
bytes = "1.10.1"
futures = "0.3.31"
log = "0.4.28"
ipnetwork = { version = "0.21.1"}
uuid = "1.18.1"
tokio = { version = "1.47.1", features = ["net", "bytes", "time"] }
tokio-util = { version = "0.7.16", features = ["codec"] }
hickory-proto = { version = "0.25.2", features = ["default", "serde"]}
sha2 = "0.11.0-rc.2"
hex = "0.4.3"
rustls = { version = "0.23.32", features = ["ring"] }
tokio-rustls = "0.26.3"
rustls-pki-types = "1.12.0"
