[package]
name = "edumdns_core"
version = "0.1.0"
edition = "2024"

[dependencies]
pcap = {  version = "2.3.0", features = ["tokio", "lending-iter", "futures"]}
pnet = "0.35.0"
thiserror = "2.0.17"
bincode = "2.0.1"
serde = { version = "1.0.226", features = ["derive"] }
bytes = "1.11.0"
futures = "0.3.31"
log = "0.4.29"
ipnetwork = { version = "0.21.1"}
uuid = "1.19.0"
tokio = { version = "1.48.0", features = ["net", "bytes", "time"] }
tokio-util = { version = "0.7.17", features = ["codec"] }
hickory-proto = { version = "0.25.2", features = ["default", "serde"]}
rustls = { version = "0.23.35", features = ["ring"] }
tokio-rustls = "0.26.4"
rustls-pki-types = "1.13.1"
