[package]
name = "edumdns_db"
version = "0.1.0"
edition = "2024"

[dependencies]
edumdns_core = { path = "../edumdns_core" }
tokio = "1.45.0"
thiserror = "2.0.12"
log = "0.4.27"
dotenvy = "0.15.7"
diesel = { version = "2.2.11", features = ["postgres", "time", "r2d2", "uuid", "network-address", "ipnet-address"] }
diesel-async = { version = "0.5.2", features = ["tokio-postgres", "postgres", "deadpool"] }
diesel_migrations = { version = "2.2.0", features = ["postgres"] }
serde = { version = "1.0.219", features = ["derive", "std"] }
time = { version = "0.3.41", features = ["serde"] }
uuid = { version = "1.16.0", features = ["v7", "serde"] }
ipnetwork = { version = "0.21.1", features = ["serde"] }
pbkdf2 = { version = "0.12.2", features = ["simple"] }
rand_core = { version = "0.6.4", features = ["std"] }