[package]
name = "edumdns_db"
version = "0.1.0"
edition = "2024"

[dependencies]
edumdns_core = { path = "../edumdns_core" }
thiserror = "2.0.16"
log = "0.4.28"
diesel = { version = "2.2.12", features = ["postgres", "time", "r2d2", "uuid", "network-address", "ipnet-address"] }
diesel-async = { version = "0.6.1", features = ["tokio-postgres", "postgres", "deadpool"] }
diesel_migrations = { version = "2.2.0", features = ["postgres"] }
serde = { version = "1.0.226", features = ["derive", "std"] }
time = { version = "0.3.44", features = ["serde", "local-offset", "parsing", "formatting"] }
uuid = { version = "1.18.1", features = ["v7", "serde"] }
ipnetwork = { version = "0.21.1", features = ["serde"] }
pbkdf2 = { version = "0.12.2", features = ["simple"] }
rand_core = { version = "0.6.4", features = ["std"] }
strum = "0.27.2"
strum_macros = "0.27.2"