[package]
name = "edumdns_probe"
version = "0.1.0"
edition = "2024"
resolver = "3"

[dependencies]
edumdns_core = { path = "../edumdns_core" }
pcap = {  version = "2.3.0", features = ["tokio", "lending-iter", "futures"]}
pnet = "0.35.0"
clap = { version = "4.5.51", features = ["derive", "env"] }
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["net", "bytes", "time"] }
bincode = "2.0.1"
tokio-util = { version = "0.7.16", features = ["codec"] }
log = "0.4.28"
uuid = { version = "1.18.1", features = ["v7", "std", "serde"]}
dotenvy = "0.15.7"
tracing = { version = "0.1.41", features = ["async-await"]}
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "local-time", "time"] }
rustls = "0.23.32"
webpki-roots = "1.0.2"
