[package]
name = "edumdns_probe"
version = "0.1.0"
edition = "2024"
resolver = "3"

[dependencies]
edumdns_core = { path = "../edumdns_core" }
pcap = {  version = "2.4.0", features = ["tokio", "lending-iter", "futures"]}
pnet = "0.35.0"
clap = { version = "4.5.53", features = ["derive", "env"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["net", "bytes", "time"] }
bincode = "2.0.1"
tokio-util = { version = "0.7.16", features = ["codec"] }
log = "0.4.28"
uuid = { version = "1.18.1", features = ["v7", "std", "serde"]}
dotenvy = "0.15.7"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "local-time", "time"] }
rustls = "0.23.35"
webpki-roots = "1.0.4"
hotpath = {version = "0.9.0"}

[features]
default = []
hotpath = ["hotpath/tui", "hotpath/tokio", "hotpath/hotpath", "hotpath/futures", "hotpath/hotpath-alloc"]
