[package]
name = "edumdns_server"
version = "0.1.0"
edition = "2024"

[dependencies]
edumdns_core = { path = "../edumdns_core" }
edumdns_db = { path = "../edumdns_db" }
pcap = {  version = "2.2.0", features = ["tokio", "lending-iter", "futures"]}
pnet = "0.35.0"
clap = { version = "4.5.36", features = ["derive"] }
thiserror = "2.0.12"
dns-parser = "0.8.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_bytes = "0.11.17"
tokio = { version = "1.44.2", features = ["full"] }
bincode = "2.0.1"
bytes = "1.10.1"
tokio-util = { version = "0.7.14", features = ["codec"] }
futures = "0.3.31"
log = "0.4.27"
diesel-async = { version = "0.5.2" , features = ["tokio-postgres", "postgres", "deadpool"]}
ipnetwork = "0.21.1"
uuid = "1.17.0"

