[package]
name = "edumdns_server"
version = "0.1.0"
edition = "2024"

[dependencies]
edumdns_core = { path = "../edumdns_core" }
edumdns_db = { path = "../edumdns_db" }
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
log = "0.4.28"
diesel-async = { version = "0.6.1" , features = ["tokio-postgres", "postgres", "deadpool"]}
ipnetwork = "0.21.1"
uuid = "1.18.1"
aya = "0.13.1"
hickory-proto = "0.25.2"
rustls = { version = "0.23.32", features = ["ring"] }
rustls-pki-types = "1.12.0"