[package]
name = "edumdns_web"
version = "0.1.0"
edition = "2024"

[dependencies]
edumdns_core = { path = "../edumdns_core" }
edumdns_db = { path = "../edumdns_db" }
actix-files = { version = "0.6.7" }
actix-web = { version = "4.11.0" }
dotenvy = "0.15.7"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
diesel-async = { version = "0.5.2" , features = ["tokio-postgres", "postgres", "deadpool"]}
thiserror = "2.0.12"
uuid = { version = "1.11.0", features = ["v4"] }
actix-identity = "0.8.0"
actix-session = { version = "0.10.1", features = ["cookie-session"]}
actix-cors = "0.7.0"
actix-multipart = "0.7.2"
actix-ws = "0.3.0"
minijinja = { version = "2.12.0", features = ["default", "loader", "deserialization"] }
minijinja-autoreload = "2.12.0"
itertools = "0.14.0"
tokio = {version = "1.47.1", features = ["full"] }
ipnetwork = "0.21.1"
strum = "0.27.2"
actix_web_openidconnect = "0.2.0"
