[package]
name = "edumdns_web"
version = "0.1.0"
edition = "2024"

[dependencies]
actix_web_openidconnect = { path = "../actix-oidc-connect" }
edumdns_core = { path = "../edumdns_core" }
edumdns_db = { path = "../edumdns_db" }
actix-files = { version = "0.6.7" }
actix-web = { version = "4.11.0" }
dotenvy = "0.15.7"
log = "0.4.28"
serde = { version = "1.0.226", features = ["derive"] }
diesel-async = { version = "0.6.1" , features = ["tokio-postgres", "postgres", "deadpool"]}
thiserror = "2.0.16"
uuid = { version = "1.18.1", features = ["v4"] }
actix-identity = "0.9.0"
actix-session = { version = "0.11.0", features = ["cookie-session"]}
actix-cors = "0.7.1"
actix-multipart = "0.7.2"
actix-ws = "0.3.0"
minijinja = { version = "2.12.0", features = ["default", "loader", "deserialization"] }
minijinja-autoreload = "2.12.0"
itertools = "0.14.0"
tokio = {version = "1.47.1", features = ["full"] }
ipnetwork = "0.21.1"
strum = "0.27.2"
regex = "1.11.2"
tokio-postgres = "0.7.13"
serde_json = "1.0.140"
time = "0.3.44"
futures-util = "0.3.31"
urlencoding = "2.1.3"
