[package]
name = "edumdns_db"
version = "0.1.0"
edition = "2024"

[dependencies]
diesel = { version = "2.3.4", features = ["postgres", "time", "r2d2", "uuid", "network-address", "ipnet-address"] }
diesel_migrations = { version = "2.3.1", features = ["postgres"] }
pbkdf2 = { version = "0.12.2", features = ["simple"] }
rand_core = { version = "0.6.4", features = ["std"] }
strum_macros = "0.27.2"
hex = "0.4.3"
itertools = "0.14.0"

edumdns_core = {workspace = true }
diesel-async = { workspace = true }
thiserror = {workspace = true}
log = {workspace = true}
serde = {workspace = true}
time = {workspace = true}
uuid = {workspace = true}
ipnetwork = {workspace = true}
strum = { workspace = true }
hickory-proto = { workspace = true}
