[package]
name = "edumdns_server"
version = "0.1.0"
edition = "2024"

[dependencies]
aya = "0.13.1"
rustls = { workspace = true }
edumdns_core = { workspace = true }
edumdns_db = { workspace = true }
thiserror = {workspace = true}
tokio = {workspace = true}
log = {workspace = true}
diesel-async = {workspace = true}
ipnetwork = {workspace = true}
uuid = {workspace = true}
hickory-proto = {workspace = true}
futures = {workspace = true}
serde = { version = "1.0.228", features = ["derive"] }
hotpath = {version = "0.9.0", features = ["default", "tui", "tokio", "hotpath-alloc", "hotpath", "futures"]}


[features]
hotpath = ["hotpath/hotpath"]
hotpath-alloc = ["hotpath/hotpath-alloc"]
tui = ["hotpath/tui"]
tokio = ["hotpath/tokio"]