[package]
name = "edumdns_server"
version = "1.0.0"
edition = "2024"

[dependencies]
aya = "0.13.1"
rustls = { workspace = true }
edumdns_core = { workspace = true }
edumdns_db = { workspace = true }
thiserror = {workspace = true}
tokio = {workspace = true}
log = {workspace = true}
diesel-async = {workspace = true}
ipnetwork = {workspace = true}
uuid = {workspace = true}
hickory-proto = {workspace = true}
futures = {workspace = true}
serde = { version = "1.0.228", features = ["derive"] }
