[package]
name = "edumdns_web"
version = "0.1.0"
edition = "2024"

[dependencies]
actix_web_openidconnect = { path = "../actix_web_openidconnect" }

actix-files = { version = "0.6.8" }
actix-multipart = "0.7.2"
regex = "1.11.2"
tokio-postgres = "0.7.15"
serde_json = "1.0.140"
actix-identity = "0.9.0"
actix-session = { version = "0.11.0", features = ["cookie-session"]}
actix-cors = "0.7.1"
actix-ws = "0.3.0"
minijinja = { version = "2.13.0", features = ["json", "serde_json", "default", "loader", "deserialization"] }
minijinja-autoreload = "2.13.0"
urlencoding = "2.1.3"
askama = "0.14.0"

edumdns_core = { workspace = true }
edumdns_db = { workspace = true }
edumdns_server = { workspace = true }
actix-web = { workspace = true }
log = { workspace = true}
serde = { workspace = true}
diesel-async = { workspace = true}
thiserror = {workspace = true}
uuid = { workspace = true }
tokio = { workspace = true}
ipnetwork = { workspace = true}
time = {workspace = true}
futures-util = {workspace = true}
hickory-proto = { workspace = true }
strum = { workspace = true }



