[package]
name = "edumdns_proxy-ebpf"
version = "0.1.0"
edition.workspace = true

[dependencies]
edumdns_proxy-common = { path = "../edumdns_proxy-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "edumdns_proxy"
path = "src/main.rs"
