[package]
name = "edumdns_proxy"
version = "0.1.0"
edition.workspace = true

license.workspace = true

[dependencies]
edumdns_proxy-common = { path = "../edumdns_proxy-common", features = ["user"] }

anyhow = { workspace = true, default-features = true }
aya = { workspace = true }
aya-log = { workspace = true }
env_logger = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
tokio = { workspace = true, features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "net",
    "signal",
] }
clap = { workspace = true, features = ["derive"] }
thiserror = "2.0.16"
uuid = "1.18.1"
[build-dependencies]
anyhow = { workspace = true }
aya-build = { workspace = true }

edumdns_proxy-ebpf = { path = "../edumdns_proxy-ebpf" }

[[bin]]
name = "edumdns_proxy"
path = "src/main.rs"
